--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -54,6 +54,7 @@ $zen-auto-include-item-base: false;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
 }
 /* Containers for grid items and flow items. */
 #header,
